--- a/WpfPills/WpfPills/MainWindow.xaml
+++ b/WpfPills/WpfPills/MainWindow.xaml
@@ -1,62 +1,24 @@
-﻿<Window x:Class="WpfPills.MainWindow"
+﻿<Window x:Class="WpfApplication1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="768" Width="1366" WindowStyle="None">
+        Title="MainWindow" Width="1366" Height="768" WindowStyle="None">
     <Grid>
-        <ListBox HorizontalAlignment="Left" Height="597" Margin="35,131,0,0" VerticalAlignment="Top" Width="233"/>
-        <TextBox Name ="NameField" HorizontalAlignment="Left" Height="30" Margin="312,131,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="224"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="608,131,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="312,195,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="101"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="456,195,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="101"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="608,195,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="101"/>
-        <Label Content="Name" HorizontalAlignment="Left" Margin="312,105,0,0" VerticalAlignment="Top"/>
-        <Label Content="Rf" HorizontalAlignment="Left" Margin="608,105,0,0" VerticalAlignment="Top"/>
-        <Label Content="From" HorizontalAlignment="Left" Margin="312,169,0,0" VerticalAlignment="Top"/>
-        <Label Content="To" HorizontalAlignment="Left" Margin="456,169,0,0" VerticalAlignment="Top"/>
-        <Label Content="Doses" HorizontalAlignment="Left" Margin="608,169,0,0" VerticalAlignment="Top"/>
-        <Label Content="Medications&#xD;&#xA;" HorizontalAlignment="Left" Margin="110,105,0,0" VerticalAlignment="Top" Height="26"/>
-        <Label Content="Days" HorizontalAlignment="Left" Margin="308,288,0,0" VerticalAlignment="Top"/>
-        <CheckBox Content="Sunday" HorizontalAlignment="Left" Margin="312,319,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <CheckBox Content="Monday" HorizontalAlignment="Left" Margin="312,339,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <CheckBox Content="Tuesday" HorizontalAlignment="Left" Margin="312,359,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <CheckBox Content="Wednesday" HorizontalAlignment="Left" Margin="312,379,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <CheckBox Content="Thursday" HorizontalAlignment="Left" Margin="312,399,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <CheckBox Content="Friday" HorizontalAlignment="Left" Margin="312,419,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <CheckBox Content="Saturday" HorizontalAlignment="Left" Margin="312,439,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <ComboBox HorizontalAlignment="Left" Margin="437,314,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox_SelectionChanged">
-            <ComboBoxItem Name="cbi1am">1:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi2am">2:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi3am">3:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi4am">4:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi5am">5:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi6am">6:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi7am">7:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi8am">8:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi9am">9:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi10am">10:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi11am">11:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi12pm">12:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi1pm">1:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi2pm">2:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi3pm">3:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi4pm">4:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi5pm">5:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi6pm">6:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi7pm">7:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi8pm">8:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi9pm">9:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi10pm">10:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi11pm">11:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi12am">12:00 AM</ComboBoxItem>
-        </ComboBox>
-        <Label Content="Hour" HorizontalAlignment="Left" Margin="437,288,0,0" VerticalAlignment="Top"/>
-        <Button Content="Add Hour" HorizontalAlignment="Left" Margin="497,354,0,0" VerticalAlignment="Top" Width="60" Click="Button_Click"/>
-        <ListBox HorizontalAlignment="Left" Height="140" Margin="595,314,0,0" VerticalAlignment="Top" Width="145"/>
-        <Label Content="Times" HorizontalAlignment="Left" Margin="595,288,0,0" VerticalAlignment="Top"/>
-        <Rectangle Fill="Black" HorizontalAlignment="Left" Height="760" Margin="879,0,0,0" Stroke="Black" VerticalAlignment="Top" Width="2"/>
-        <Label Content="Pharmacy Info" HorizontalAlignment="Left" Margin="1042,10,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <Label Content="Medication Info" HorizontalAlignment="Left" Margin="338,10,0,0" VerticalAlignment="Top" FontSize="24"/>
-        <TextBox HorizontalAlignment="Left" Height="527" Margin="913,91,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="398"/>
-        <Button Content="Add Medication" HorizontalAlignment="Left" Margin="312,500,0,0" VerticalAlignment="Top" Width="525" Height="60" FontSize="24"/>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="679,0" StartPoint="679,768" MappingMode="Absolute">
+                <GradientStop Color="Black" Offset="0"/>
+                <GradientStop Color="White" Offset="0.9"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+
+        <Button Name="Emergency" Content="EMERGENCY" HorizontalAlignment="Left" Margin="1128,430,0,0" VerticalAlignment="Top" Width="220" Height="320" Background="Red" FontSize="30" FontWeight="Bold" Foreground="White" Click="ButtonClickHandler"/>
+        <Button Name="Medication" Content="Medications" HorizontalAlignment="Left" Margin="1128,220,0,0" VerticalAlignment="Top" Width="220" Height="200" FontSize="25" Click="ButtonClickHandler"/>
+        <Button Name="Vitals"  Content="Vitals" HorizontalAlignment="Left" Margin="1128,10,0,0" VerticalAlignment="Top" Width="220" Height="200" FontSize="25" Click="ButtonClickHandler"/>
+        <Button Name="Settings" Content="Settings" HorizontalAlignment="Left" Margin="15,664,0,0" VerticalAlignment="Top" Width="100" Height="85" FontSize="25" Click="ButtonClickHandler"/>
+
+        <TextBox HorizontalAlignment="Left" Height="75" Margin="15,10,0,0" TextWrapping="Wrap" Text="Notifications Box" VerticalAlignment="Top" Width="1070" FontSize="45" Background="{x:Null}"/>
+        <TextBox HorizontalAlignment="Left" Height="75" Margin="15,90,0,0" TextWrapping="Wrap" Text="Vitals Box" VerticalAlignment="Top" Width="1070" FontSize="45" Background="{x:Null}"/>
+        <TextBox Name="time" HorizontalAlignment="Left" Height="84" Margin="120,665,0,0" TextWrapping="Wrap" Text="Time" VerticalAlignment="Top" Width="405" FontSize="45" Background="{x:Null}" Foreground="White"/>
+        <TextBox Name="date" HorizontalAlignment="Left" Height="84" Margin="530,665,0,0" TextWrapping="Wrap" Text="Date" VerticalAlignment="Top" Width="555" FontSize="45" Background="{x:Null}" Foreground="White"/>
+
     </Grid>
 </Window>
