--- a/WpfPills/WpfPills/Pills.xaml
+++ b/WpfPills/WpfPills/Pills.xaml
@@ -1,62 +1,119 @@
 ﻿<Window x:Class="TheMozyer.Pills"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="768" Width="1366" WindowStyle="None">
+        Title="Pills" Height="768" Width="1366" WindowStyle="None">
     <Grid>
-        <ListBox HorizontalAlignment="Left" Height="597" Margin="35,131,0,0" VerticalAlignment="Top" Width="233"/>
-        <TextBox Name ="NameField" HorizontalAlignment="Left" Height="30" Margin="312,131,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="224"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="608,131,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="312,195,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="101"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="456,195,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="101"/>
-        <TextBox HorizontalAlignment="Left" Height="30" Margin="608,195,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="101"/>
+        <ListBox Name="MedicationList" HorizontalAlignment="Left" Height="528" Margin="35,131,0,0" VerticalAlignment="Top" Width="233" SelectionChanged="MedicationList_SelectionChanged"/>
+
+        <TextBox Name="name" HorizontalAlignment="Left" Height="30" Margin="289,131,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="302"/>
+        <TextBox Name="Rf" HorizontalAlignment="Left" Height="30" Margin="723,131,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75"/>
+        <TextBox Name="Doses" HorizontalAlignment="Left" Height="30" Margin="723,195,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="101"/>
+
+
         <Label Content="Name" HorizontalAlignment="Left" Margin="312,105,0,0" VerticalAlignment="Top"/>
-        <Label Content="Rf" HorizontalAlignment="Left" Margin="608,105,0,0" VerticalAlignment="Top"/>
+        <Label Content="Rf" HorizontalAlignment="Left" Margin="723,105,0,0" VerticalAlignment="Top"/>
         <Label Content="From" HorizontalAlignment="Left" Margin="312,169,0,0" VerticalAlignment="Top"/>
-        <Label Content="To" HorizontalAlignment="Left" Margin="456,169,0,0" VerticalAlignment="Top"/>
-        <Label Content="Doses" HorizontalAlignment="Left" Margin="608,169,0,0" VerticalAlignment="Top"/>
+        <Label Content="To" HorizontalAlignment="Left" Margin="513,169,0,0" VerticalAlignment="Top"/>
+        <Label Content="Doses" HorizontalAlignment="Left" Margin="723,169,0,0" VerticalAlignment="Top"/>
         <Label Content="Medications&#xD;&#xA;" HorizontalAlignment="Left" Margin="110,105,0,0" VerticalAlignment="Top" Height="26"/>
-        <Label Content="Days" HorizontalAlignment="Left" Margin="308,288,0,0" VerticalAlignment="Top"/>
-        <CheckBox Content="Sunday" HorizontalAlignment="Left" Margin="312,319,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <CheckBox Content="Monday" HorizontalAlignment="Left" Margin="312,339,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <CheckBox Content="Tuesday" HorizontalAlignment="Left" Margin="312,359,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <CheckBox Content="Wednesday" HorizontalAlignment="Left" Margin="312,379,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <CheckBox Content="Thursday" HorizontalAlignment="Left" Margin="312,399,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <CheckBox Content="Friday" HorizontalAlignment="Left" Margin="312,419,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <CheckBox Content="Saturday" HorizontalAlignment="Left" Margin="312,439,0,0" VerticalAlignment="Top" Checked="CheckBox_Checked"/>
-        <ComboBox HorizontalAlignment="Left" Margin="437,314,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox_SelectionChanged">
-            <ComboBoxItem Name="cbi1am">1:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi2am">2:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi3am">3:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi4am">4:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi5am">5:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi6am">6:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi7am">7:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi8am">8:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi9am">9:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi10am">10:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi11am">11:00 AM</ComboBoxItem>
-            <ComboBoxItem Name="cbi12pm">12:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi1pm">1:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi2pm">2:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi3pm">3:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi4pm">4:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi5pm">5:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi6pm">6:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi7pm">7:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi8pm">8:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi9pm">9:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi10pm">10:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi11pm">11:00 PM</ComboBoxItem>
-            <ComboBoxItem Name="cbi12am">12:00 AM</ComboBoxItem>
-        </ComboBox>
-        <Label Content="Hour" HorizontalAlignment="Left" Margin="437,288,0,0" VerticalAlignment="Top"/>
-        <Button Content="Add Hour" HorizontalAlignment="Left" Margin="497,354,0,0" VerticalAlignment="Top" Width="60" Click="Button_Click"/>
-        <ListBox HorizontalAlignment="Left" Height="140" Margin="595,314,0,0" VerticalAlignment="Top" Width="145"/>
-        <Label Content="Times" HorizontalAlignment="Left" Margin="595,288,0,0" VerticalAlignment="Top"/>
-        <Rectangle Fill="Black" HorizontalAlignment="Left" Height="760" Margin="879,0,0,0" Stroke="Black" VerticalAlignment="Top" Width="2"/>
+        <Label Content="Days" HorizontalAlignment="Left" Margin="319,270,0,0" VerticalAlignment="Top"/>
+        <Label Content="Hour" HorizontalAlignment="Left" Margin="499,292,0,0" VerticalAlignment="Top"/>
+        <Label Content="Minute" HorizontalAlignment="Left" Margin="569,292,0,0" VerticalAlignment="Top"/>
+        <Label Content="AM/PM" HorizontalAlignment="Left" Margin="649,292,0,0" VerticalAlignment="Top"/>
         <Label Content="Pharmacy Info" HorizontalAlignment="Left" Margin="1042,10,0,0" VerticalAlignment="Top" FontSize="24"/>
         <Label Content="Medication Info" HorizontalAlignment="Left" Margin="338,10,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label Content="Times" HorizontalAlignment="Left" Margin="749,270,0,0" VerticalAlignment="Top"/>
+
+
+        <CheckBox Name="SundayBox" Content="Sunday" HorizontalAlignment="Left" Margin="322,343,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+            <CheckBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </CheckBox.RenderTransform>
+        </CheckBox>
+        <CheckBox Name="MondayBox" Content="Monday" HorizontalAlignment="Left" Margin="323,387,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+            <CheckBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </CheckBox.RenderTransform>
+        </CheckBox>
+        <CheckBox Name ="TuesdayBox" Content="Tuesday" HorizontalAlignment="Left" Margin="320,428,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+            <CheckBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </CheckBox.RenderTransform>
+        </CheckBox>
+        <CheckBox Name="WednesdayBox" Content="Wednesday" HorizontalAlignment="Left" Margin="330,471,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+            <CheckBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </CheckBox.RenderTransform>
+        </CheckBox>
+        <CheckBox Name="ThursdayBox" Content="Thursday" HorizontalAlignment="Left" Margin="322,514,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+            <CheckBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </CheckBox.RenderTransform>
+        </CheckBox>
+        <CheckBox Name ="FridayBox" Content="Friday" HorizontalAlignment="Left" Margin="313,559,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+            <CheckBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </CheckBox.RenderTransform>
+        </CheckBox>
+        <CheckBox Name="SaturdayBox" Content="Saturday" HorizontalAlignment="Left" Margin="322,602,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+            <CheckBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="2" ScaleY="2"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </CheckBox.RenderTransform>
+        </CheckBox>
+
+        <ComboBox Name="hours" HorizontalAlignment="Left" Margin="481,318,0,0" VerticalAlignment="Top" Width="70" RenderTransformOrigin="0.5,0.5" Height="50"/>
+
+
+        <Button Content="Add Hour" HorizontalAlignment="Left" Margin="559,375,0,0" VerticalAlignment="Top" Width="150" Click="Add_Hour" Height="60"/>
+        <ListBox Name="times" HorizontalAlignment="Left" Height="140" Margin="723,318,0,0" VerticalAlignment="Top" Width="110"/>
+        <Rectangle Fill="Black" HorizontalAlignment="Left" Height="760" Margin="879,0,0,0" Stroke="Black" VerticalAlignment="Top" Width="2"/>
         <TextBox HorizontalAlignment="Left" Height="527" Margin="913,91,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="398"/>
-        <Button Content="Add Medication" HorizontalAlignment="Left" Margin="312,500,0,0" VerticalAlignment="Top" Width="525" Height="60" FontSize="24"/>
+        <Button Content="Add Medication" HorizontalAlignment="Left" Margin="308,668,0,0" VerticalAlignment="Top" Width="525" Height="60" FontSize="24" Click="Add_Medication"/>
+        <ComboBox Name="minutes" HorizontalAlignment="Left" Margin="559,318,0,0" VerticalAlignment="Top" Width="70" RenderTransformOrigin="0.5,0.5" Height="50"/>
+
+        <ComboBox Name="apm" HorizontalAlignment="Left" Margin="639,318,0,0" VerticalAlignment="Top" Width="70" RenderTransformOrigin="0.5,0.5" Height="50">
+            <ComboBoxItem x:Name="cbi1am2" Content="AM"/>
+            <ComboBoxItem x:Name="cbi2am2" Content="PM"/>
+        </ComboBox>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="913,668,0,0" VerticalAlignment="Top" Width="185" Height="60" FontSize="24"/>
+        <Button Content="Home" HorizontalAlignment="Left" Margin="1126,668,0,0" VerticalAlignment="Top" Width="185" Height="60" FontSize="24" Click="Home_Button"/>
+        <DatePicker Name="from" HorizontalAlignment="Left" Margin="289,195,0,0" VerticalAlignment="Top" Height="40" Width="110"/>
+        <DatePicker Name="to" HorizontalAlignment="Left" Margin="481,195,0,0" VerticalAlignment="Top" Height="40" Width="110"/>
+        <Button Content="Remove Medication" HorizontalAlignment="Left" Margin="35,668,0,0" VerticalAlignment="Top" FontSize ="24" Width="233" Height="58" Click="Remove_Medication"/>
     </Grid>
 </Window>
