--- a/WpfPills/WpfPills/MedicineWindow.xaml
+++ b/WpfPills/WpfPills/MedicineWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfApplication1.MainWindow"
+﻿<Window x:Class="TheMozyer.MedicineWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Width="1366" Height="768" WindowStyle="None">
@@ -10,16 +10,18 @@
             </LinearGradientBrush>
         </Grid.Background>
 
-        <Button Name="Emergency" Content="EMERGENCY" HorizontalAlignment="Left" Margin="1128,430,0,0" VerticalAlignment="Top" Width="220" Height="320" Background="Red" FontSize="30" FontWeight="Bold" Foreground="White" Click="ButtonClickHandler"/>
-        <Button Name="Medication" Content="Medications" HorizontalAlignment="Left" Margin="1128,220,0,0" VerticalAlignment="Top" Width="220" Height="200" FontSize="25" Click="ButtonClickHandler"/>
-        <Button Name="Vitals"  Content="Vitals" HorizontalAlignment="Left" Margin="1128,10,0,0" VerticalAlignment="Top" Width="220" Height="200" FontSize="25" Click="ButtonClickHandler"/>
-        <Button Name="Settings" Content="Settings" HorizontalAlignment="Left" Margin="15,664,0,0" VerticalAlignment="Top" Width="100" Height="85" FontSize="25" Click="ButtonClickHandler"/>
+        <Button Name="Emergency" Content="EMERGENCY" HorizontalAlignment="Left" Margin="1128,430,0,0" VerticalAlignment="Top" Width="220" Height="320" Background="Red" FontSize="30" FontWeight="Bold" Foreground="White" Click="PageHandler"/>
+        <Button Name="Medication" BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Left" Margin="1128,220,0,0" VerticalAlignment="Top" Width="220" Height="200" FontSize="25" Click="PageHandler">
+            <Image Source="images/SelectBottle.png" Height ="190" Width="220" Stretch="Fill"/>
+        </Button>
+        <Button Name="Vitals"  BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Left" Margin="1128,10,0,0" VerticalAlignment="Top" Width="220" Height="200" FontSize="25" Click="PageHandler">
+            <Image Source="images/SelectVitals.jpg" Height ="200" Width="220" Stretch="Fill"/>
+        </Button>
+        <Button Name="Settings" Content="Settings" HorizontalAlignment="Left" Margin="15,664,0,0" VerticalAlignment="Top" Width="100" Height="85" FontSize="25" Click="PageHandler"/>
 
-        <TextBox HorizontalAlignment="Left" Height="75" Margin="15,10,0,0" TextWrapping="Wrap" Text="Warning: Blood Glucose Levels Low, Eat a Snack" VerticalAlignment="Top" Width="1070" FontSize="45" Background="{x:Null}" TextChanged="TextBox_TextChanged"/>
+        <TextBox HorizontalAlignment="Left" Height="75" Margin="15,10,0,0" TextWrapping="Wrap" Text="Warning: Blood Glucose Levels Low, Eat a Snack" VerticalAlignment="Top" Width="1070" FontSize="45" Background="{x:Null}"/>
         <TextBox Name="time" HorizontalAlignment="Left" Height="84" Margin="120,665,0,0" TextWrapping="Wrap" Text="Time" VerticalAlignment="Top" Width="405" FontSize="45" Background="{x:Null}" Foreground="White"/>
         <TextBox Name="date" HorizontalAlignment="Left" Height="84" Margin="530,665,0,0" TextWrapping="Wrap" Text="Date" VerticalAlignment="Top" Width="555" FontSize="45" Background="{x:Null}" Foreground="White"/>
-        <Image x:Name="vitalsButton" HorizontalAlignment="Left" Height="200" Margin="1128,10,0,0" VerticalAlignment="Top" Width="220" Source="/images/CleanVitals.jpg" Stretch="Fill"/>
-        <Image x:Name="pillsButton" HorizontalAlignment="Left" Height="200" Margin="1128,225,0,0" VerticalAlignment="Top" Width="220" Source="/images/SelectBottle.png" Stretch="Fill"/>
         <Border BorderBrush="Black" BorderThickness="2">
             <Grid HorizontalAlignment="Left" Height="569" Margin="15,90,0,0" VerticalAlignment="Top" Width="1070">
                 <Grid.RowDefinitions>
@@ -40,7 +42,7 @@
                 <Label Grid.Column="2" Grid.Row="0" Name="pillHeader" FontSize="30" HorizontalAlignment="Center" >Pill</Label>
                 <Label Grid.Column="3" Grid.Row="0" Name="doseHeader" FontSize="30" HorizontalAlignment="Center" >Dose</Label>
 
-                <CheckBox Grid.Column="0" Grid.Row="1" Name="firstTaken" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" Width="13" IsChecked="True">
+                <CheckBox Grid.Column="0" Grid.Row="1" Name="firstTaken" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" Width="18" IsChecked="True">
                     <CheckBox.LayoutTransform>
                         <ScaleTransform ScaleX="2" ScaleY="2" />
                     </CheckBox.LayoutTransform>
@@ -49,7 +51,7 @@
                 <Label Grid.Column="2" Grid.Row="1" Name="firstPill" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" >Tylenol</Label>
                 <Label Grid.Column="3" Grid.Row="1" Name="firstDose" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" >2 Pills</Label>
 
-                <CheckBox Grid.Column="0" Grid.Row="2" Name="secondTaken" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="13" IsChecked="True">
+                <CheckBox Grid.Column="0" Grid.Row="2" Name="secondTaken" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="18" IsChecked="True">
                     <CheckBox.LayoutTransform>
                         <ScaleTransform ScaleX="2" ScaleY="2" />
                     </CheckBox.LayoutTransform>
@@ -58,7 +60,7 @@
                 <Label Grid.Column="2" Grid.Row="2" Name="secondPill" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" >Dayquil</Label>
                 <Label Grid.Column="3" Grid.Row="2" Name="secondDose" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" >1 Pill</Label>
 
-                <CheckBox Grid.Column="0" Grid.Row="3" Name="thirdTaken" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" Width="13">
+                <CheckBox Grid.Column="0" Grid.Row="3" Name="thirdTaken" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" Width="18">
                     <CheckBox.LayoutTransform>
                         <ScaleTransform ScaleX="2" ScaleY="2" />
                     </CheckBox.LayoutTransform>
@@ -67,7 +69,7 @@
                 <Label Grid.Column="2" Grid.Row="3" Name="thirdPill" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" >Vitamin Supplement</Label>
                 <Label Grid.Column="3" Grid.Row="3" Name="thirdDose" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" >1 Pill</Label>
 
-                <CheckBox Grid.Column="0" Grid.Row="4" Name="fourthTaken" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" Width="13">
+                <CheckBox Grid.Column="0" Grid.Row="4" Name="fourthTaken" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" Width="18">
                     <CheckBox.LayoutTransform>
                         <ScaleTransform ScaleX="2" ScaleY="2" />
                     </CheckBox.LayoutTransform>
