--- a/WpfPills/WpfPills/MedicineWindow.xaml
+++ b/WpfPills/WpfPills/MedicineWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="TheMozyer.MedicineWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Width="1366" Height="768" WindowStyle="None">
+        Title="MainWindow" Width="1366" Height="768" WindowStyle="None" AllowsTransparency="True" >
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="679,0" StartPoint="679,768" MappingMode="Absolute">
