--- a/WpfPills/WpfPills/MainWindow.xaml
+++ b/WpfPills/WpfPills/MainWindow.xaml
@@ -1,28 +1,37 @@
 ﻿<Window x:Class="TheMozyer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Width="1366" Height="768" WindowStyle="None" ResizeMode="NoResize" Closing="Window_Closing">
+        Title="MainWindow" Width="1366" Height="768" WindowStyle="None" ResizeMode="NoResize" Closing="Window_Closing" AllowsTransparency="True">
     <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FF00CFCF" Offset="1"/>
+                <GradientStop Color="White" Offset="0.239"/>
+                <GradientStop Color="#FFC5F4F4" Offset="0.486"/>
+            </LinearGradientBrush>
+        </Grid.Background>
 
         <Button Name="Emergency" Content="EMERGENCY" HorizontalAlignment="Left" Margin="1128,430,0,0" VerticalAlignment="Top" Width="220" Height="320" Background="Red" FontSize="30" FontWeight="Bold" Foreground="White" Click="PageHandler"/>
         <Button Name="Medication" BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Left" Margin="1128,220,0,0" VerticalAlignment="Top" Width="220" Height="200" FontSize="25" Click="PageHandler">
-             <Image Source="images/SelectBottle.png" Height ="190" Width="220" Stretch="Fill"/>
+            <Image Source="images/SelectBottle.png" Height ="190" Width="220" Stretch="Fill"/>
         </Button>
         <Button Name="Vitals"  BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Left" Margin="1128,10,0,0" VerticalAlignment="Top" Width="220" Height="200" FontSize="25" Click="PageHandler">
             <Image Source="images/SelectVitals.jpg" Height ="200" Width="220" Stretch="Fill"/>
         </Button>
-        <Button Name="Settings" Content="Settings" HorizontalAlignment="Left" Margin="15,664,0,0" VerticalAlignment="Top" Width="100" Height="85" FontSize="25" Click="PageHandler"/>
+        <Button Background="Transparent" Name="Settings" HorizontalAlignment="Left" Margin="15,664,0,0" VerticalAlignment="Top" Width="100" Height="85" FontSize="25" Click="PageHandler" BorderBrush="{x:Null}">
+            <Image Source="settings.png" Stretch="Fill"/>
+        </Button>
 
-        <TextBox Name="Notifications" HorizontalAlignment="Left" Height="75" Margin="15,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="1070" FontSize="45" Background="{x:Null}" BorderBrush="{x:Null}"/>
+        <TextBox Name="Notifications" IsReadOnly="True" HorizontalAlignment="Left" Height="75" Margin="15,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="1070" FontSize="45" Background="{x:Null}" BorderBrush="{x:Null}" SelectionBrush="{x:Null}"/>
         <TextBox Name="HeartRate" HorizontalAlignment="Left" Height="75" Margin="15,90,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="125" FontSize="45" Background="{x:Null}"  BorderBrush="{x:Null}" FontFamily="Arial"/>
         <TextBox Name="time" HorizontalAlignment="Left" Height="84" Margin="120,665,0,0" TextWrapping="Wrap" Text="Time" VerticalAlignment="Top" Width="405" FontSize="45" Background="{x:Null}" Foreground="Black" BorderBrush="{x:Null}"/>
         <TextBox Name="date" HorizontalAlignment="Left" Height="84" Margin="530,665,0,0" TextWrapping="Wrap" Text="Date" VerticalAlignment="Top" Width="555" FontSize="45" Background="{x:Null}" Foreground="Black" BorderBrush="{x:Null}"/>
         <Image HorizontalAlignment="Left" Height="75" Margin="156,90,0,0" VerticalAlignment="Top" Width="71" Source="download.jpg"/>
-        <TextBox Name="Systolic" HorizontalAlignment="Left" Height="75" Margin="415,90,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="125" BorderBrush="{x:Null}" FontFamily="Arial" FontSize="45"/>
-        <TextBox Name="Diastolic" HorizontalAlignment="Left" Height="75" Margin="566,90,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="125" BorderBrush="{x:Null}" FontFamily="Arial" FontSize="45"/>
-        <Image HorizontalAlignment="Left" Height="100" Margin="712,75,0,0" VerticalAlignment="Top" Width="100" Source="download (1).jpg"/>
-        <Label Content="Systolic" HorizontalAlignment="Left" Margin="430,170,0,0" VerticalAlignment="Top" Width="95" Height="40" FontFamily="Arial" FontSize="22"/>
-        <Label Content="Diastolic" HorizontalAlignment="Left" Margin="582,170,0,0" VerticalAlignment="Top" Width="95" Height="40" FontFamily="Arial" FontSize="22"/>
+        <TextBox Name="Systolic" HorizontalAlignment="Left" Height="57" Margin="432,85,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" BorderBrush="{x:Null}" FontFamily="Arial" FontSize="45" Background="{x:Null}"/>
+        <TextBox Name="Diastolic" HorizontalAlignment="Left" Height="62" Margin="603,85,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="64" BorderBrush="{x:Null}" FontFamily="Arial" FontSize="45" Background="{x:Null}"/>
+        <Image HorizontalAlignment="Left" Height="90" Margin="712,85,0,0" VerticalAlignment="Top" Width="100" Source="download (1).jpg"/>
+        <Label Content="Systolic" HorizontalAlignment="Left" Margin="432,147,0,0" VerticalAlignment="Top" Width="108" Height="40" FontFamily="Arial" FontSize="25"/>
+        <Label Content="Diastolic" HorizontalAlignment="Left" Margin="584,147,0,0" VerticalAlignment="Top" Width="108" Height="40" FontFamily="Arial" FontSize="25"/>
 
     </Grid>
 </Window>
