--- a/WpfPills/WpfPills/VitalsWindow.xaml
+++ b/WpfPills/WpfPills/VitalsWindow.xaml
@@ -4,27 +4,38 @@
         Title="MainWindow" Width="1366" Height="768" WindowStyle="None" AllowsTransparency="True">
     <Grid>
         <Grid.Background>
-            <LinearGradientBrush EndPoint="679,0" StartPoint="679,768" MappingMode="Absolute">
-                <GradientStop Color="White" Offset="0"/>
-                <GradientStop Color="White" Offset="0.9"/>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FF00CFCF" Offset="1"/>
+                <GradientStop Color="White" Offset="0.239"/>
+                <GradientStop Color="#FFC5F4F4" Offset="0.486"/>
             </LinearGradientBrush>
         </Grid.Background>
 
         <Button Name="Emergency" Content="EMERGENCY" HorizontalAlignment="Left" Margin="1128,430,0,0" VerticalAlignment="Top" Width="220" Height="320" Background="Red" FontSize="30" FontWeight="Bold" Foreground="White" Click="PageHandler"/>
         <Button Name="Medication" BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Left" Margin="1128,220,0,0" VerticalAlignment="Top" Width="220" Height="200" FontSize="25" Click="PageHandler">
-          <Image Source="images/SelectBottle.png" Height ="190" Width="220" Stretch="Fill"/>
+            <Image Source="images/SelectBottle.png" Height ="190" Width="220" Stretch="Fill"/>
         </Button>
         <Button Name="Vitals"  BorderThickness="0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Left" Margin="1128,10,0,0" VerticalAlignment="Top" Width="220" Height="200" FontSize="25" Click="PageHandler">
-          <Image Source="images/SelectVitals.jpg" Height ="200" Width="220" Stretch="Fill"/>
+            <Image Source="images/SelectVitals.jpg" Height ="200" Width="220" Stretch="Fill"/>
         </Button>
-        <Button Name="Settings" Content="Settings" HorizontalAlignment="Left" Margin="15,664,0,0" VerticalAlignment="Top" Width="100" Height="85" FontSize="25" Click="PageHandler"/>
+        <Button Background="Transparent" Name="Settings"  HorizontalAlignment="Left" Margin="15,664,0,0" VerticalAlignment="Top" Width="100" Height="85" FontSize="25" Click="PageHandler" BorderBrush="{x:Null}">
+            <Image Source="settings.png" Stretch="Fill"/>
+        </Button>
 
-        <TextBox HorizontalAlignment="Left" Height="75" Margin="15,10,0,0" TextWrapping="Wrap" Text="Warning: Blood Glucose Levels Low, Eat a Snack" VerticalAlignment="Top" Width="1070" FontSize="45" Background="{x:Null}"/>
-        <TextBox HorizontalAlignment="Left" Height="75" Margin="15,379,0,0" TextWrapping="Wrap" Text="Blood Glucose Level: Low, Eat a Snack" VerticalAlignment="Top" Width="1070" FontSize="35" Background="{x:Null}"/>
-        <TextBox Name="time" HorizontalAlignment="Left" Height="84" Margin="120,665,0,0" TextWrapping="Wrap" Text="Time" VerticalAlignment="Top" Width="405" FontSize="45" Background="{x:Null}"/>
-        <TextBox Name="date" HorizontalAlignment="Left" Height="84" Margin="530,665,0,0" TextWrapping="Wrap" Text="Date" VerticalAlignment="Top" Width="555" FontSize="45" Background="{x:Null}"/>
-        <Image x:Name="bloodChart" HorizontalAlignment="Left" Height="200" Margin="15,459,0,0" VerticalAlignment="Top" Width="1070" Source="/images/newBloodGraph.png" Stretch="Fill"/>
+        <TextBox HorizontalAlignment="Left" Height="75" Margin="15,10,0,0" TextWrapping="Wrap" Text="WARNING: BLOOD GLUCOSE LEVELS LOW, EAT A SNACK" VerticalAlignment="Top" Width="1070" FontSize="42" Background="{x:Null}" BorderBrush="{x:Null}"/>
+        <TextBox HorizontalAlignment="Left" Height="50" Margin="15,404,0,0" TextWrapping="Wrap" Text="Blood Glucose Level:" VerticalAlignment="Top" Width="331" FontSize="35" Background="{x:Null}" BorderBrush="{x:Null}"/>
+        <TextBox HorizontalAlignment="Left" Height="55" Margin="351,404,0,0" TextWrapping="Wrap" Text="LOW" VerticalAlignment="Top" Width="95" FontSize="35" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Red"/>
+        <TextBox HorizontalAlignment="Left" Height="55" Margin="451,404,0,0" TextWrapping="Wrap" Text="Eat a Snack" VerticalAlignment="Top" Width="331" FontSize="35" Background="{x:Null}" BorderBrush="{x:Null}"/>
+        <TextBox Name="time" HorizontalAlignment="Left" Height="84" Margin="225,665,0,0" TextWrapping="Wrap" Text="Time" VerticalAlignment="Top" Width="300" FontSize="45" Background="{x:Null}" BorderBrush="{x:Null}"/>
+        <TextBox Name="date" HorizontalAlignment="Left" Height="84" Margin="530,665,0,0" TextWrapping="Wrap" Text="Date" VerticalAlignment="Top" Width="555" FontSize="45" Background="{x:Null}" BorderBrush="{x:Null}"/>
+        <Image x:Name="bloodChart" HorizontalAlignment="Left" Height="200" Margin="15,459,0,0" VerticalAlignment="Top" Width="1075" Source="/images/newBloodGraph.png" Stretch="Fill"/>
         <Image x:Name="heartChart" HorizontalAlignment="Left" Height="200" Margin="10,179,0,0" VerticalAlignment="Top" Width="1075" Source="/images/newHeartGraph.png" Stretch="Fill"/>
-        <TextBox HorizontalAlignment="Left" Height="75" Margin="15,104,0,0" TextWrapping="Wrap" Text="Heart Rate Level: Good" VerticalAlignment="Top" Width="1070" FontSize="35" Background="{x:Null}"/>
+        <TextBox HorizontalAlignment="Left" Height="75" Margin="291,104,0,0" TextWrapping="Wrap" Text="GOOD" VerticalAlignment="Top" Width="139" FontSize="35" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF00B600"/>
+        <TextBox HorizontalAlignment="Left" Height="75" Margin="15,104,0,0" TextWrapping="Wrap" Text="Heart Rate Level:" VerticalAlignment="Top" Width="271" FontSize="35" Background="{x:Null}" BorderBrush="{x:Null}"/>
+        <Button x:Name="Home" Background="Transparent" HorizontalAlignment="Left" Margin="120,665,0,0" VerticalAlignment="Top" Width="100" Height="85" FontSize="25" Click="PageHandler" BorderBrush="{x:Null}">
+            <Image Source="home.png" Stretch="Fill"/>
+        </Button>
+        <Rectangle HorizontalAlignment="Left" Height="200" Margin="15,459,0,0" Stroke="Black" VerticalAlignment="Top" Width="1075" />
+        <Rectangle HorizontalAlignment="Left" Height="200" Margin="10,179,0,0" Stroke="Black" VerticalAlignment="Top" Width="1075" />
     </Grid>
 </Window>
